--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,7 +12,7 @@
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Start service"
+            android:text="Start"
             android:id="@+id/btn_sendToService" android:layout_gravity="center_horizontal"/>
 </LinearLayout>
 
